# aim_training

./: CMakeLists.txt  LICENSE  README.md
App/: CMakeLists.txt
App/Source/: AppLayer.cpp  AppLayer.h  Main.cpp
Core/: CMakeLists.txt
Core/Source/Core/: Application.cpp  Application.h  Event.h  Layer.h  Window.cpp  Window.h
